...
        ),
        NavigationDestination(
          icon: Badge(
            isLabelVisible: hasNewDish,
            child: const Icon(Icons.description_outlined),
          ),
          label: 'My Menu',
        ),
      ],
    ),
  );
}

